--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>11111</h1>
     <h2>222222</h2>
+    <div>
+        <img src="./240610-日本PLOTTER -購物車-v2/image/banner02.jpg" alt="">
+    </div>
 </body>
 </html>
